# adedonha

./: .gitignore  Program.cs  README.md  adedonha.csproj  pyproject.toml
Data/: AppDbContext.cs  partidas.db
adedonha/: __init__.py  config.json  main.py
