[tool.poetry]
name = "adedonha"
version = "0.1.0"
description = "Uma implementação em python do jogo adedonha"
authors = ["Daniel Aspect"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
